--- a/src/pages/profile/profile.module.scss
+++ b/src/pages/profile/profile.module.scss
@@ -1,19 +1,28 @@
 @use 'src/styles/breakpoints';
 
+div.pageContainer {
+  margin-block-end: 0;
+  padding-block-end: calc(var(--spacing-mega) * 2) !important;
+}
+
 .wrapper {
   display: flex;
   flex-direction: column;
   gap: var(--spacing-xlarge-px);
+
   .divider {
     margin-block: var(--spacing-medium2-px);
   }
+
   .deleteAccountSection {
     display: flex;
     flex-direction: column;
     gap: var(--spacing-medium2-px);
+
     .deleteAccountSectionDescription {
       color: var(--color-text-default-new);
       font-size: var(--font-size-small-px);
+
       .deleteAccountSectionDescriptionTitle {
         font-weight: var(--font-weight-bold);
       }
